# Zernel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-ENTERPRISE  README.md  SECURITY.md  deny.toml  upload_iso.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docker.yml  docs.yml  license-check.yml  nightly.yml  release.yml  security-audit.yml
.wrangler/cache/: wrangler-account.json
distro/debian/: changelog  control  rules  zernel-cli.install  zernel-scheduler.install  zerneld.install
distro/gnome/overrides/: 01-zernel.gschema.override
distro/gnome/zernel-gpu-indicator@dyber.io/: metadata.json
distro/gnome/zernel-gpu-indicator@dyber.org/: extension.js  metadata.json  stylesheet.css
distro/installer/: zernel-install.sh
distro/iso/: Dockerfile.iso-builder  build-iso.sh
distro/iso/hooks/: 03-gnome-setup.hook.chroot
distro/kernel/config/: zernel-x86_64
distro/scripts/: setup-ml-stack.sh  zernel-install
distro/sysctl/: 99-zernel.conf
distro/systemd/: ollama.service  zernel-dashboard.service  zernel-scheduler.service  zerneld.service
docs/: api.md  architecture.md  benchmark-results.txt  cli.md  configuration.md  ebpf.md  installation.md  kernel-config.md  scheduler.md  technical-reference.md  upgrade.md
docs/architecture/: overview.md
notebooks/: zernel_colab_benchmark.ipynb
scripts/: build-all.sh  deploy-server.sh  quickstart-wsl.sh  setup-dev-env.sh  test-all.sh
tests/: Cargo.toml
tests/integration/: cli_workflow.rs  security.rs
website/: blog-how-we-built-zernel.html  demo.html  index.html
zernel-accel/: zernel_accel.py
zernel-cli/: Cargo.toml
zernel-cli/benches/: extraction_bench.rs
zernel-cli/src/: main.rs  validation.rs
zernel-cli/src/commands/: audit.rs  autopilot.rs  bench.rs  cloud.rs  cluster.rs  cost.rs  data.rs  debug.rs  doctor.rs  env.rs  exp.rs  fleet.rs  gpu.rs  hub.rs  init.rs  job.rs  job_k8s.rs  job_ssh.rs  log.rs  marketplace.rs  migrate.rs  mod.rs  model.rs  notebook.rs  onboard.rs  optimize.rs  optimize_auto.py  power.rs  pqc.rs  profile.rs  run.rs  secure.rs  serve.rs  tune.rs  watch.rs
zernel-cli/src/experiments/: compare.rs  mod.rs  store.rs  tracker.rs
zernel-cli/src/telemetry/: client.rs  display.rs  mod.rs
zernel-cli/src/zql/: executor.rs  mod.rs  parser.rs  schema.rs
zernel-dashboard/: Cargo.toml
zernel-dashboard/src/: main.rs  routes.rs  sse.rs  state.rs
zernel-ebpf/: Cargo.toml  build.rs
zernel-ebpf/src/: aggregation.rs  alerts.rs  fallback.rs  gpu_watchdog.rs  loader.rs  main.rs  metrics_server.rs  nccl_priority.rs  power.rs  prefetch.rs  simulator.rs  websocket_server.rs
zernel-ebpf/src/bpf/: common.h  cuda_trace.bpf.c  dataload.bpf.c  dist_sync.bpf.c  gpu_mem.bpf.c  nccl.bpf.c
zernel-ebpf/src/consumers/: cuda_trace.rs  dataload.rs  dist_sync.rs  gpu_mem.rs  mod.rs  nccl.rs
zernel-runtime/: pyproject.toml
zernel-runtime/zernel_runtime/: __init__.py  cli.py  optimizer.py
zernel-scheduler/: Cargo.toml  build.rs
zernel-scheduler/benches/: scheduler_bench.rs
zernel-scheduler/src/: config.rs  main.rs  multi_tenant.rs  numa.rs  phase_detector.rs  scheduler.rs  task_state.rs  telemetry.rs
zernel-scheduler/src/bpf/: zernel_maps.h  zernel_sched.bpf.c
zernel-sdk/python/: setup.py
zernel-sdk/python/zernel/: __init__.py
