[workspace]
resolver = "2"
members = [
    "zernel-scheduler",
    "zernel-ebpf",
    "zernel-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dyber, Inc."]
license = "GPL-2.0"
repository = "https://github.com/dyber-inc/zernel"
description = "AI-native Linux distribution for ML and LLM workloads"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
