[package]
name = "zernel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "LicenseRef-Zernel-Enterprise"
description = "Zernel CLI IDE — terminal-native ML developer environment"

[[bin]]
name = "zernel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
nom = "7"
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = "0.26"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tabled = "0.17"
futures-util = "0.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "extraction_bench"
harness = false
