[package]
name = "zernel-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "LicenseRef-Zernel-Enterprise"
description = "Zernel web dashboard — browser-based ML monitoring"

[[bin]]
name = "zernel-dashboard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
