[package]
name = "zernel-ebpf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-2.0"
description = "Zernel eBPF observability daemon (zerneld)"

[features]
default = []
# BPF probe compilation requires Linux + clang/llvm.
# When enabled, build.rs compiles .bpf.c → .skel.rs via libbpf-cargo.
bpf = ["libbpf-rs", "libbpf-cargo"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libbpf-rs = { version = "0.24", optional = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
quick-xml = "0.37"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
libbpf-cargo = { version = "0.26", optional = true }
