[package]
name = "zernel-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-2.0"
description = "Zernel sched_ext ML-aware CPU scheduler"

[features]
default = []
# BPF compilation requires Linux + clang/llvm. Disabled by default for cross-platform dev.
bpf = ["libbpf-rs", "libbpf-cargo"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libbpf-rs = { version = "0.23", optional = true }

[build-dependencies]
libbpf-cargo = { version = "0.23", optional = true }
